Incubator run(), runLoop(), run4Roller() have been written. There's a TODO -  to run run4Roller() in a separate thread. Code has not been compiled/tested.

--- a/src/config.json
+++ b/src/config.json
@@ -1,13 +1,12 @@
 {
 	"session": {
 		"name": "Chicken egg session",
-		"days": 21,
-		"max_days": 23,
+		"days": 28,
 		"phases": [
-			{ "name": "warming-up", "s1":  0, "s2":  0, "t1": 37.20, "t2": 38.89, "h1": 50.0, "h2": 55.0, "af": 10, "ro": 17280 },
-			{ "name": "incubating", "s1":  1, "s2": 16, "t1": 37.20, "t2": 38.89, "h1": 50.0, "h2": 55.0, "af": 10, "ro": 17280 },
-			{ "name": "hatching",   "s1": 17, "s2": 22, "t1": 37.20, "t2": 38.89, "h1": 65.0, "h2": 75.0, "af": 50, "ro":     0 },
-			{ "name": "feeding",    "s1": 23, "s2": 27, "t1": 34.00, "t2": 36.00, "h1": 40.0, "h2": 50.0, "af": 50, "ro":     0 }
+			{ "name": "warming-up", "s1":  0, "s2":  0, "t1": 37.22, "t2": 38.89, "h1": 50.0, "h2": 55.0, "af": 10, "ro": 17280 },
+			{ "name": "incubating", "s1":  1, "s2": 16, "t1": 37.22, "t2": 38.89, "h1": 50.0, "h2": 55.0, "af": 10, "ro": 17280 },
+			{ "name": "hatching",   "s1": 17, "s2": 22, "t1": 37.22, "t2": 38.89, "h1": 65.0, "h2": 75.0, "af": 50, "ro":     31536000 },
+			{ "name": "feeding",    "s1": 23, "s2": 27, "t1": 34.00, "t2": 36.00, "h1": 40.0, "h2": 50.0, "af": 50, "ro":     31536000 }
 		]
 	}
 }
