code clean-ups and some testing related codes..

--- a/src/Makefile
+++ b/src/Makefile
@@ -16,6 +16,7 @@ SED = sed
 # generate dependency without mentioning system header directories
 MAKEDEPEND = $(C++) -MM
 CPPFLAGS = -g -Wall -std=c++14 -I $(DIR_Config) -I $(DIR_GUI) -I $(DIR_EPD) -I $(DIR_Examples)
+#CPPFLAGS = -DSKIP_WIRINGPI_SETUP -g -Wall -std=c++14 -I $(DIR_Config) -I $(DIR_GUI) -I $(DIR_EPD) -I $(DIR_Examples)
 LDFLAGS = -L/usr/local/lib -lpthread -lwiringPi -ljsoncpp -llcd
 
 SRCS = $(wildcard *.cpp)
