--- a/src/display_server/Makefile
+++ b/src/display_server/Makefile
@@ -14,7 +14,7 @@ RM = rm -f
 SED = sed
 # generate dependency without mentioning system header directories
 MAKEDEPEND = $(C++) -MM
-CPPFLAGS = -g -Wall -std=c++14 -I $(DIR_Config) -I $(DIR_GUI) -I $(DIR_EPD) -I $(DIR_Examples)
+CPPFLAGS = -O2 -Wall -std=c++14 -I $(DIR_Config) -I $(DIR_GUI) -I $(DIR_EPD) -I $(DIR_Examples)
 #CPPFLAGS = -DSKIP_WIRINGPI_SETUP -g -Wall -std=c++14 -I $(DIR_Config) -I $(DIR_GUI) -I $(DIR_EPD) -I $(DIR_Examples)
 LDFLAGS = -L/usr/local/lib -lpthread -lwiringPi -ljsoncpp -llcd -lsystemd
 
