--- a/src/http_server4remote_ui/Makefile
+++ b/src/http_server4remote_ui/Makefile
@@ -1,11 +1,11 @@
-all: server
+all: pico_http_server
 
 clean:
 	@rm -rf *.o
-	@rm -rf server
+	@rm -rf pico_http_server
 
-server: main.o httpd.o
-	gcc -o server $^
+pico_http_server: main.o httpd.o
+	gcc -o pico_http_server $^
 
 main.o: main.c httpd.h
 	gcc -c -o main.o main.c
